# runa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PKGBUILD  README.md  SECURITY.md  book.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflow/: rust.yml
.github/workflows/: aur.yml  dependabot.yml  deploy.yml  docs.yml  nightly.yml  releases.yml  rust.yml  update-templates.yml
assets/: config_help.txt  keybinds.txt
assets/cli/: config_help.txt  keybinds.txt
assets/config/: runa_full.toml  runa_minimal.toml
docs/: book.toml  configuration.md
docs/config/: configuration.md
docs/config-reference/: keys.md  theme.md
docs/config/config-reference/: keys.md  theme.md
docs/src/: SUMMARY.md
docs/src/config-reference/: display.md  editor.md  general.md
src/: app.rs  cli.rs  config.rs  core.rs  file_manager.rs  formatter.rs  keymap.rs  lib.rs  main.rs  search.rs  terminal.rs  ui.rs  utils.rs  worker.rs
src/app/: actions.rs  find_state.rs  handlers.rs  info.rs  keymap.rs  metadata.rs  nav.rs  parent.rs  preview.rs  property.rs  state.rs  tab.rs  timings.rs
src/app/handlers/: file.rs  file_actions.rs  input.rs  input_mode.rs  nav_actions.rs  overlay.rs  overlay_handlers.rs
src/config/: assets.rs  display.rs  general.rs  input.rs  load.rs  presets.rs  theme.rs
src/config/theme/: colorpair.rs  components.rs
src/core/: cache.rs  file_info.rs  file_manager.rs  find.rs  fm.rs  formatter.rs  fs.rs  metadata.rs  proc.rs  search.rs  sort.rs  terminal.rs  worker.rs  workers.rs
src/ui/: icons.rs  overlays.rs  panes.rs  render.rs  terminal.rs  widgets.rs
src/ui/widgets/: dialog.rs  draw.rs  input.rs  overlays.rs  status.rs
src/utils/: cli.rs  editor.rs  formatter.rs  helpers.rs  macros.rs  os.rs  path.rs  text.rs  timings.rs
tests/: find_tests.rs  nav_tests.rs  ui_tests.rs  worker_tests.rs
