[package]
name = "runa-tui"
description = "A fast, keyboard-focused terminal file manager (TUI). Highly configurable and lightweight."
version = "0.10.0-beta.1"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexm-dev/runa"
readme = "README.md"
authors = ["Alexandros McCray <alexandros@amccray.com>"]
categories = ["filesystem", "command-line-utilities", "command-line-interface"]
keywords = ["file-browser", "file-manager", "tui", "cli", "search"]

[[bin]]
name = "rn"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "8.0.1"
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
dashmap = "6.1.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
humansize = "2.1.3"
phf = { version = "0.13.1", features = ["macros"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
trash = "5.2.5"
unicode-width = "0.2.2"
which = "8.0.2"

[target.'cfg(unix)'.dependencies]
uzers = "0.12.2"

[dev-dependencies]
rand = "0.10.0"
tempfile = "3.24.0"
filetime = "0.2.27"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release-windows]
inherits = "release"
panic = "unwind"
