[package]
name = "runa-tui"
description = "A fast, keyboard-focused terminal file manager (TUI). Highly configurable and lightweight."
version = "0.12.0-beta.1"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexm-dev/runa"
homepage = "https://alexm-dev.github.io/runa/"
readme = "README.md"
authors = ["Alexandros McCray <alexandros@amccray.com>"]
categories = ["filesystem", "command-line-utilities", "command-line-interface"]
keywords = ["file-browser", "file-manager", "tui", "cli", "search"]

[[bin]]
name = "rn"
path = "src/main.rs"

[dependencies]
ansi-to-tui = { version = "8.0.1", default-features = false, features = ["simd"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
crossbeam-channel = "0.5.15"
dashmap = { version = "6.2.1", default-features = false }
fuzzy-matcher = "0.3.7"
home = "0.5.12"
humansize = "2.1.3"
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde", "std"] }
unicode-width = "0.2.2"
which = "8.0.4"

[target.'cfg(target_os = "windows")'.dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events", "windows"] }
trash = { version = "5.2.6", default-features = false, features = ["coinit_apartmentthreaded"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
trash = { version = "5.2.6", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "8.2.0", default-features = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify = { version = "8.2.0", default-features = false }

[target.'cfg(unix)'.dependencies]
uzers = { version = "0.12.2", default-features = false }

[dev-dependencies]
rand = "0.10.1"
tempfile = "3.27.0"
filetime = "0.2.29"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
